# WireframeAscii

./: .gitignore  73.c  73b.c  CMakeLists.txt  README.md  launcher.c
assets/: splash.txt
assets/launcher test/: test.c
assets/launcher test/urb/: app.c
binaries/: 73
binaries/urb/: core32  core64  resources.rar
resources/: CUBE.sb2  bresenham.c
resources/launcher test/urb/: pt.sc
